--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,10 @@ services:
   app:
     build:
       context: .
+    depends_on:
+      - db
     ports:
       - '8080:8080'
+
+  db:
+    image: postgres:14-alpine
