--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <description>HelloDemo</description>
     <properties>
         <java.version>17</java.version>
+        <commons-io.version>1.3.2</commons-io.version>
     </properties>
 
     <dependencies>
@@ -34,6 +35,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
         </dependency>
     </dependencies>
 
