--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
         <java.version>17</java.version>
         <commons-io.version>1.3.2</commons-io.version>
         <mysql.version>8.0.20</mysql.version>
-<!--        <liquibase.version>3.10.0</liquibase.version>-->
+        <liquibase.version>3.10.0</liquibase.version>
     </properties>
 
     <dependencies>
@@ -39,9 +39,14 @@
             <version>2.7.6</version>
         </dependency>
 
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-jdbc</artifactId>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-jdbc</artifactId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
         <dependency>
@@ -55,11 +60,11 @@
 <!--            <artifactId>postgresql</artifactId>-->
 <!--        </dependency>-->
 
-<!--        <dependency>-->
-<!--            <groupId>org.liquibase</groupId>-->
-<!--            <artifactId>liquibase-core</artifactId>-->
-<!--            <version>${liquibase.version}</version>-->
-<!--        </dependency>-->
+        <dependency>
+            <groupId>org.liquibase</groupId>
+            <artifactId>liquibase-core</artifactId>
+            <version>${liquibase.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
