--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,8 @@ spring:
     enabled: true
 server:
   port: 8081
+  servlet:
+    context-path: /levelup
 levelup:
   application:
     value: 123
