--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,9 +13,24 @@ spring:
 #    username: postgres
 #    password: postgres
 #    driverClassName: org.postgresql.Driver
+  jpa:
+    generate-ddl: false
+    hibernate:
+      ddl-auto: validate
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    show-sql: true
+    properties:
+      hibernate:
+        default_schema: db
+        format_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
   liquibase:
     change-log: 'classpath:db/migration/changeLog.xml'
     enabled: true
+  messages:
+    basename: messages # i18n.messages
+
 server:
   port: 8081
   servlet:
